test/deriver/errors/unsupported_type_variable.expected
File "unsupported_type_variable.ml", line 1, characters 0-43:
1 | type 'typvar t = 'typvar [@@deriving irmin]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: ppx_irmin: uninstantiated type variable 'typvar found. Irmin types must be grounded.
